crates/shep-cli/src/lookout/frames/snapshots/shep__lookout__frames__tests__sheep_dog_table.snap
---
source: crates/shep-cli/src/lookout/frames/mod.rs
assertion_line: 91
expression: render_text(&buffer)
---
shep lookout   /home/ada/.shep                                                                                                                    6 in the flock
                                                                                                                                                                
  api › jobs  (dog table)                                                                                                                                       
>  concurrency                2                                                          FOCUSED  concurrency  integer                                          
   hours.end                  17:00                                                       concurrency                                                           
   hours.start                09:00                                                                                                                             
   merge                      ask                                                         now     2                                                             
   models.worker.model        small                                                       default (none)                                                        
   models.worker.token        <set>                                                       example (none)                                                        
                                                                                                                                                                
                                                                                          ──────────────────────────────────────────────────────────────────────
                                                                                          VALIDATION                                                            
                                                                                          █ a whole number                                                      
  shep publishes the change; jobs decides what to reload                                                                                                        
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
                                                                                                                                                                
esc close   j/k select   g/G first/last   r refresh   space cycle   e edit   d back to default   u undo   h help   * yours   ! parked   q quit   control enabled
